cmake_minimum_required(VERSION 3.27)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled main.c
        chap01/vidu01.c
        chap02/vidu01.c
        chap01/sm.c
        chap01/vidu02.c
        chap01/baitap01.c
        chap01/baitaptulam1.c
        chap01/baitaptulam2.c
        chap01/baitapsession4.1.c
        chap01/baitapsession4.2.c
        chap01/baitapsession4.3.c
        chap01/baitapsession4.4.c
        chap01/baitapsession4.5.c
)
